# living-doc-augmentor-gh

./: .pylintrc  CONTRIBUTING.md  DEVELOPER.md  Makefile  README.md  SPEC.md  TASKS.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  copilot-instructions.md  copilot-review-rules.md  dependabot.yml
.github/agents/: senior-developer.agent.md
.github/workflows/: check_pr_release_notes.yml  release_draft.yml  test.yml
living_doc_augmentor/: __init__.py
scripts/: run_qa.sh
tests/unit/: test_smoke.py
