[project]
name = "living-doc-augmentor"
description = "GitHub Action that validates and extracts structured @LivDoc:* annotations from source code."
requires-python = ">=3.14"

[tool.black]
line-length = 120
target-version = ['py314']

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 95

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_configs = true
exclude = "tests"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.radon]
cc_min = "B"
